# MCInversionPhDCollection

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
data/: CaesarBust.ply  DoubleWedge.stl  blub.ply  bunnyDanielLSW150.vtk  bunnyPts_3.ply  bunnyPts_3_Daniel.ply  bunnyPts_4.ply  bunnyPts_Minimal.ply  bunny_PtCloudRep.ply  bustDanielLSW150.vtk  maxPlanck.ply  maxPlanckPts_3_BallPivoting10.ply  maxPlanck_Pts_2D.ply  sampledIco.ply  spotPts_4.ply
data_eval/: BunnyLSW150FullWrap_Histograms.txt  BunnyLSW150Obstacle_Histograms.txt  BunnyLSWDaniel_Histograms.txt  BunnyRepulsive220_Histograms.txt  HausdorffDistEvolution_Results.txt  curveCurveHausdorff.py  curveVisual.py  distance_field_visualization.py  etaDistanceEvol.py  etaPlot.py  hausdorffEval.py  histogramEval.py  inscribedCircleCalculatorProgressVisualisation.py  inscribedCircleParticleSwarm.py  manifoldCurveEvolVis_Static.py  manifoldCurveEvolVisualisation.py  plotCtrlFunctions - Copy.py  plotCtrlFunctions.py  plotCtrlFunctions2.py  terrainRegions.py  vertexValuesPlot.py
src/: BrainSurfaceEvolver.cpp  BrainSurfaceEvolver.h  ConversionUtils.cpp  ConversionUtils.h  ConvexHullEvolver.cpp  ConvexHullEvolver.h  EvolverUtilsCommon.cpp  EvolverUtilsCommon.h  Experiments.h  IcoSphereEvolver.cpp  IncrementalMeshBuilder.cpp  IncrementalMeshBuilder.h  IncrementalMeshFileHandler.cpp  IncrementalMeshFileHandler.h  IncrementalProgressTracker.cpp  IncrementalProgressUtils.cpp  IncrementalProgressUtils.h  IsosurfaceEvolver.cpp  IsosurfaceEvolver.h  Main.cpp  MeshRenderHandler.cpp  MeshRenderHandler.h  MeshUpdateHandler.cpp  MeshUpdateHandler.h  PointCloudMeshingStrategies.cpp  PointCloudMeshingStrategies.h  SheetMembraneEvolver.cpp  SheetMembraneEvolver.h  ShrinkWrapMain.cpp  SphereTest.cpp  SphereTest.h  SurfaceEvolver.cpp  SurfaceEvolver.h  VertexSamplingStrategies.cpp  VertexSamplingStrategies.h
src/core/: BrainSurfaceEvolver.cpp  BrainSurfaceEvolver.h  CMakeLists.txt  CharacteristicsBuilder.cpp  CharacteristicsBuilder.h  ConversionUtils.cpp  ConversionUtils.h  ConvexHullEvolver.cpp  ConvexHullEvolver.h  EvolverUtilsCommon.cpp  EvolverUtilsCommon.h  IMB_ShrinkWrapper.cpp  IMB_ShrinkWrapper.h  IcoSphereEvolver.cpp  IcoSphereEvolver.h  IncrementalMeshBuilder.h  IncrementalMeshFileHandler.cpp  IncrementalMeshFileHandler.h  IncrementalProgressUtils.cpp  IncrementalProgressUtils.h  InscribedManifold.cpp  InscribedManifold.h  IsosurfaceEvolver.cpp  IsosurfaceEvolver.h  ManifoldEvolver.cpp  ManifoldEvolver.h  MeasurementUtils.cpp  MeasurementUtils.h  PointCloudMeshingStrategies.cpp  PointCloudMeshingStrategies.h  SheetMembraneEvolver.cpp  SheetMembraneEvolver.h  SphereTest.cpp  SphereTest.h  SurfaceEvolver.cpp  SurfaceEvolver.h  VertexSamplingStrategies.cpp  VertexSamplingStrategies.h
src/core_tests/: CMakeLists.txt  EvolverUtilsTests.cpp  InscribedManifoldTests.cpp  ManifoldEvolverTests.cpp  MiscConversionUtilTests.cpp
src/experiments/: IOEnvironment.h  IncrementalMeshBuilderCESCG.cpp  IncrementalMeshBuilderTUWien.cpp  NewEvolverInnerOuterLSW.cpp  OldEvolverInPMP.cpp  PolygonalDatasets.cpp  PolygonalDatasets.h  ProjectOfDissertation.cpp  RevisitingOldEvolverWSCG.cpp  SubdivisionSSGG.cpp  TerrainGeneration.cpp
src/fade2d/: CMakeLists.txt
src/fade2d/include_fade2d/: Triangle2.h  common.h
src/geometry/: CMakeLists.txt  CollisionKdTree.cpp  CollisionKdTree.h  ConvexHull.cpp  ConvexHull.h  GeometryAdapters.h  GeometryConversionUtils.cpp  GeometryConversionUtils.h  GeometryIOUtils.cpp  GeometryIOUtils.h  GeometryUtil.cpp  GeometryUtil.h  Grid.cpp  Grid.h  GridUtil.cpp  GridUtil.h  IcoSphereBuilder.cpp  IcoSphereBuilder.h  IncrementalMeshBuilder.cpp  IncrementalMeshBuilder.h  InnerManifold.cpp  InnerManifold.h  InscribedManifold.cpp  InscribedManifold.h  MarchingCubes.cpp  MarchingCubes.h  MeshAdapter.h  MeshAnalysis.cpp  MeshAnalysis.h  MeshSelfIntersection.cpp  MeshSelfIntersection.h  MobiusStriBuilder.cpp  MobiusStripBuilder.cpp  MobiusStripBuilder.h  MultiTorusMeshBuilder.cpp  MultiTorusMeshBuilder.h  New Text Document.txt  PlaneBuilder.cpp  PlaneBuilder.h  PoissonAdapter.h  (+10 more)
src/geometry/Poisson/: MultiGridOctreeData.inl
src/geometry_tests/: CMakeLists.txt  GeometryUtilTests.cpp  GridUtilTests.cpp  MeshAnalysisTests.cpp
src/pmp/: BoundingBox.h  CMakeLists.txt  Config.h  HandleAndPropertyTypes.h  ManifoldCurve2D.cpp  ManifoldCurve2D.h  MatVec.h  Properties.h  SurfaceMesh.cpp  SurfaceMesh.h  SurfaceMeshIO.cpp  SurfaceMeshIO.h  Types.h
src/pmp/algorithms/: ArcLengthCalculator.cpp  ArcLengthCalculator.h  Curvature.cpp  Curvature.h  CurveFactory.cpp  CurveFactory.h  Decimation.cpp  Decimation.h  DifferentialGeometry.cpp  DifferentialGeometry.h  DistanceUtils.cpp  DistanceUtils.h  EdgeKdTree.cpp  EdgeKdTree.h  Features.cpp  Features.h  Normals.cpp  Normals.h  Remeshing.cpp  Remeshing.h  Shapes.cpp  Smoothing.cpp  Subdivision.cpp  Subdivision.h  SurfaceCurvature.cpp  SurfaceFactory.cpp  SurfaceGeodesic.cpp  SurfaceRemeshing.cpp  SurfaceSimplification.cpp  TriangleKdTree.h  (+4 more)
src/pmp_tests/: CMakeLists.txt  CurveRemeshingTests.cpp  DifferentialGeometryTest.cpp  ManifoldCurve2DTest.cpp  MatVecTest.cpp
src/poly2tri/: CMakeLists.txt
src/quickhull/: CMakeLists.txt  ConvexHull.hpp
src/sawhney_mat/: BoundaryElement.h  BoundaryGenerator.cpp  BoundaryGenerator.h  CMakeLists.txt  Edge.h  KeyPoint.h  MedialAxisTransform.cpp  MedialAxisTransform.h  Parabola.h  Path.h  Utils.h
src/sdf/: CMakeLists.txt  CollisionKdTree.cpp  CollisionKdTree.h  FastSweep.cpp  FastSweep.h  OctreeVoxelizer.cpp  OctreeVoxelizer.h  SDF.cpp  SDF.h  Voxelizer.cpp  Voxelizer.h
src/sdf_tests/: CMakeLists.txt  DistanceFieldGenerator2D_Tests.cpp  DistanceFieldGenerator3D_Tests.cpp
src/sdfgen/: CMakeLists.txt  makelevelset3.cpp  makelevelset3.h  util.h  vec.h
src/stb_image/: CMakeLists.txt
src/stb_utils/: CMakeLists.txt  stb_image_dummy.cpp
src/utils/: CMakeLists.txt  FileMappingWrapper.cpp  FileMappingWrapper.h  IFileMappingWrapper.h  IncrementalUtils.cpp  IncrementalUtils.h  NumericalUtils.cpp  NumericalUtils.h  StringUtils.cpp  StringUtils.h  TimingUtils.h
